--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
             "email": "jainooson@gmail.com"
         }
     ],
-    "require": {}
+    "autoload" : {
+        "psr-4": {
+            "ntentan\\utils\\": "src/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit" : "4.*"
+    }
 }
