Added tests for validators and changed test structure

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,16 @@ php:
  - "5.4"
  - "5.5"
  - "hhvm"
+ - 5.6
  
 matrix:
   include:
-    - php: 5.6
+    - php: 5.7
       env: COVERAGE=yes
 
 before_script:
- - composer install
+ - composer install --prefer-dist
 
-script: vendor/bin/phpunit --coverage-clover coverage.clover tests
+script: vendor/bin/phpunit --coverage-clover coverage.clover tests/cases
 after_script: if [ "$COVERAGE" == "yes" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --access-token="93e209791d440d1069195255daaa32ce84f96e88ced6d40490b1352dca34f96c" --format=php-clover coverage.clover; fi
 
