--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ php:
  - "5.4"
  - "5.5"
  - "hhvm"
- - 5.6
+ - "7"
  
 matrix:
+  allow_failures:
+    - php: "7"
   include:
-    - php: 5.7
+    - php: 5.6
       env: COVERAGE=yes
 
 before_script:
