--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: php
+sudo: false
+dist: trusty
 php:
  - "5.5"
  - "hhvm"
  - "5.6"
- 
+
 matrix:
   include:
     - php: 7
@@ -14,4 +16,3 @@ before_script:
 
 script: vendor/bin/phpunit --coverage-clover coverage.clover tests/cases
 after_script: if [ "$COVERAGE" == "yes" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --access-token="93e209791d440d1069195255daaa32ce84f96e88ced6d40490b1352dca34f96c" --format=php-clover coverage.clover; fi
-
