--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0",
+        "phpunit/phpunit" : "@stable",
         "mikey179/vfsStream": "~1.0"
     }
 }
