--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ env: COVERAGE=yes
 before_script:
  - composer install --prefer-dist
 
-script: vendor/bin/phpunit --coverage-clover coverage.clover -c tests/config.xml
+script: vendor/bin/phpunit --coverage-clover coverage.clover -c tests/phpunit.xml
 after_script: if [ "$COVERAGE" == "yes" ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --access-token="93e209791d440d1069195255daaa32ce84f96e88ced6d40490b1352dca34f96c" --format=php-clover coverage.clover; fi
