Updated dependencies and moved tests to PHPUnit 8

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit" : "^6 <6.5",
-        "mikey179/vfsStream": "@stable",
+        "phpunit/phpunit" : "@stable",
+        "mikey179/vfsstream": "@stable",
         "php-mock/php-mock-phpunit": "^2"
     }
 }
