--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -15,5 +15,6 @@ jobs:
       - name: Running php unit tests
         run: vendor/bin/phpunit  --coverage-clover coverage.clover -c tests/phpunit.xml
       - name: Uploading code coverage to scrutinizer
-        run: wget https://scrutinizer-ci.com/ocular.phar 
-        run: php ocular.phar code-coverage:upload --access-token="93e209791d440d1069195255daaa32ce84f96e88ced6d40490b1352dca34f96c" --format=php-clover coverage.clover
+        run: 
+          - wget https://scrutinizer-ci.com/ocular.phar 
+          - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
