--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,9 @@
+build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
 tools:
     php_sim: true
     php_pdepend: true
