--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 name: Tests
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  PHPUnit:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
